--- a/templates/blogform.html
+++ b/templates/blogform.html
@@ -12,11 +12,15 @@
         <section class="row">
           <form>
             <label>
-              title:
-              <input type="text" name="title" value="title"></label>
+              Title:
+              <input type="text" name="title" value="title">
+              </label>
+              <br>
             <label>
-              blog:
-              <textarea value="rant" name="rant"></label>
+              Blog:
+              <textarea value="rant" name="rant">
+              </textarea>
+              </label>
             <button>Commit</button>
             </form>
         </section>
