--- a/templates/blogform.html
+++ b/templates/blogform.html
@@ -1,10 +1,5 @@
-<!DOCTYPE HTML>
-<html lang="en">
-  <head>
-    <title>The Blog</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
+{% extends "base.html" %}
+{% block content %}
     <header>
       <h1 class="text-center">The Blog</h1>
       </header>
@@ -25,5 +20,5 @@
             </form>
         </section>
       </article>
-  </body>
-</html>
+
+{% endblock %}
