added register.html to templates

--- a/templates/blogform.html
+++ b/templates/blogform.html
@@ -17,7 +17,7 @@
               <br>
             <label>
               <div>Blog:</div>
-              <textarea name="rant">{{rant}}</textarea>
+              <textarea name="rant" value="{{rant}}">{{rant}}</textarea>
               </label>
               <div> 
               {% if error == True and rant == "" %}
