--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -8,7 +8,8 @@
     {% for i in posts %}
     <article class="container">
       <section class="row">
-      {{ i.title }}
+      <a href="/">{{ i.title }}</a>
+      {{ i }}
       </section>
       <pre class="row">
           {{ i.post }}
