--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>The Blog spot</title
+    <title>The Blog spot</title>
     <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   </head>  
   <body>
+    <header class="container">
+      <h1 class="text-center">The Blog</h1>
+      <div class="row">
+        <a href="#">login</a>
+        <a href="/register">Sign up</a>
+        <a href="/blog">post a blog</a>
+      </div>
+    </header>
+    <hr>
      {% block content %}
      {% endblock %}
   </body>
