--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <header class="container">
       <h1 class="text-center">The Blog</h1>
       <div class="row">
-        <a href="#">login</a>
+        <a href="/login">login</a>
         <a href="/register">Sign up</a>
         <a href="/blog">post a blog</a>
       </div>
