added single post page

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,8 @@
       <h1 class="text-center">The Blog</h1>
       <div class="row">
         <a href="/login">login</a>
-        <a href="/register">Sign up</a>
-        <a href="/blog">post a blog</a>
+        <a href="/SignUp">Sign up</a>
+        <a href="/blogform">post a blog</a>
       </div>
     </header>
     <hr>
