--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
         <input type="text" name="name" value="{{name}}">
     </label>
     {% if error == True and name == "" %}
-      <div class="error">A name must be entered.</div>
+      <div class="error">That username is not avialable.</div>
     {% endif %}
     <br>
     <label>
