added ability to log out

--- a/templates/singlepost.html
+++ b/templates/singlepost.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>{{ postid.title }}</h2>
+<h2>{{ postid.title }}</h2> <div>{{ postid.dateTime.strftime("%b %d, %Y")}}</div>
+<hr>
 <pre>{{ postid.bpost }}</pre>
 {% endblock %}
