editpost now updates db

--- a/templates/blogform.html
+++ b/templates/blogform.html
@@ -20,6 +20,7 @@
         {% endif %}
         <br>
         <button>Commit</button>
+        <a href="/blog">Cancel</a>
       </form>
     </section>
   </article>
