--- a/templates/blogform.html
+++ b/templates/blogform.html
@@ -2,7 +2,7 @@
 {% block content %}
   <article class="container">
     <section class="row">
-      <form method='post' class="col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
+      <form method='POST' class="col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
         <label>
           <div>Title:</div>
           <input type="text" name="title" value="{{title}}">
