--- a/templates/delete.html
+++ b/templates/delete.html
@@ -2,11 +2,11 @@
 {% block content %}
 <section class="container">
   <div class="row">
-    <p>Are you sure you want to <span class="delete">delete {{ title }}</span>
+    <p>Are you sure you want to <span class="delete">delete {{ title }}</span>?</p>
   </div>
   <div class="row">
   <form method="POST">
-    <button name"delete" value="{{ title }}">Commit</button><a href="/blog">Cancel</a>
+    <button name="delete">Commit</button><a href="/blog">Cancel</a>
   </form>
 </div>
 {% endblock %}
