--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -15,21 +15,22 @@
           {{ i.bpost }}
       </pre>
       </section>
-      {% if user != "" %}
+      {% if user != "" and user != None%}
         {% if user != i.user %}
       <form class="row" method="POST">
         <button class="" name="like" value="{{ i.key().id() }}">Like</button>
       </form>
-        {% else %}
-      <form method="GET">
+      {% else %}
+      <form method="get">
         <a href="/editpost/{{ i.key().id() }}" name="edit" value="EditPost">Edit</a>
-        <a href="/delete/{{ i.key().id() }}" class="delete" name="delete" value="deletePost">Delete</a>
+        <a href="/delete/{{ i.key().id() }}" class="delete">Delete</a>
       </form>
         {% endif %}
       {% endif %}
       <!-- view comments -->
       <section class="comments">
       {% for n in comments %}
+      {% if n.commentId == i.key().id() %}
       <div class="container">
         <div class="row">
           <h4> {{ n.title }}</h4>
@@ -42,32 +43,13 @@
         <div class="#">
           <p>{{ n.user }}</p>
           <p>{{ n.dateTime.strftime("%b %d %Y") }}</p>
+          {% if user != "" and user != None %}
           <a href="/editpost/{{ n.key().id() }}">Edit</a><a href="/delete/ {{ n.key().id() }}">Delete</a>
+          {% endif %}
         </div>
       </div>
-      {% endfor %}
-      </section>
-      {% if user != "" %}
-      <section class="NewComment">
-        <div class="container">
-          <div class="row">
-            <form method="POST">
-              <label>
-                <div>Title:</div>
-                <input type="text" name="Ctitle" value="{{Ctitle}}">
-              </label>
-              <br>
-              <label>
-                <div>Comment</div>
-                <textarea name="comment" value="{{comment}}"></textarea>
-              </label>
-              <br>
-                <button name="postid" value="{{ i.key().id() }}">Submit</button><a href="/blog">Cancel</a>
-            </form>
-          </div>
-        </div>
-      </section>
       {% endif %}
+      {% endfor %}
     </article>
     {% endfor %}
     {% endblock %}
