--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,30 @@
 {% extends "base.html" %}
 {% block content %}
+<section class="container">
+{% if message != "" %}
+<div class="row">
+  <div class="error col-xs-offset-5 col-xs-2 col-sm-offset-5 col-sm-2 col-md-offset-5 col-md-2 col-lg-offset-5 col-lg-2">{{ message }}</div>
+</div>
+{% endif %}
 <form method="post" class="container">
-  <label>
-   <div>Name:</div>
-   <input type="text" name="name" value="{{name}}">
-  </label>
+<div class="row">
+  <label class="col-xs-offset-4 col-xs-1 col-sm-offset-4 col-sm-1 col-md-offset-4 col-md-1 col-lg-offset-4 col-lg-1">Name:</label>
+   <input type="text" name="name" value="{{name}}" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
   {% if error == True and name == "" %}
-    <div class="error"> Incorrect username.</div>
-  {% endif %}
+    <div class="error col-xs-2 col-sm-2 col-md-2 col-lg-2"> Incorrect username.</div>
+  {% endif %}</div>
   <br>
-  <label>
-    <div>Password:</div>
-    <input type="password" name="pwd">
-  </label>
+  <div class="row">
+  <label class="col-xs-offset-4 col-xs-1 col-sm-offset-4 col-sm-1 col-md-offset-4 col-md-1 col-lg-offset-4 col-lg-1">Password:</label>
+    <input type="password" name="pwd" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
   {% if error == True and not name %}
-    <div class="error">Incorrect password.</div>
-  {% endif %}
+    <div class="error col-xs-2 col-sm-2 col-md-2 col-lg-2">Incorrect password.</div>
+  {% endif %}</div>
   <br>
-  <button>Submit</button><a href="/blog">Cancel</a>
+  <div class="row">
+  <button class="col-xs-offset-5 col-xs-1 col-sm-offset-5 col-sm-1 col-md-offset-5 col-md-1 col-lg-offset-5 col-lg-1">Submit</button>
+  <a href="/blog" class="col-xs-1 col-sm-1 col-md-1 col-lg-1">Cancel</a>
+  </div>
 </form>
+</section>
 {% endblock %}
