--- a/templates/blogform.html
+++ b/templates/blogform.html
@@ -1,26 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
-  <article class="container">
-    <section class="row">
-      <form method='POST' class="col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
-        <label>
-          <div>Title:</div>
-          <input type="text" name="title" value="{{title}}">
-        </label>
+  <article>
+    <section class="container">
+      <form method='POST'>
+      <div class="row">
+        <label class="col-xs-offset-4 col-xs-1 col-sm-offset-4 col-sm-1 col-md-offset-4 col-md-1 col-lg-offset-4 col-lg-1">Title:</label>
+          <input type="text" name="title" value="{{title}}" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
           {% if error == True and title == "" %}
-            <div class="error">You need to enter a title</div>
+            <div class="error col-xs-2 col-sm-2 col-md-2 col-lg-2">You need to enter a title</div>
           {% endif %}
-        <br>
-        <label>
-          <div>Blog:</div>
-          <textarea name="rant" value="{{rant}}">{{rant}}</textarea>
-        </label> 
+        </div>
+        <div class="row">
+        <label class="col-xs-offset-4 col-xs-1 col-sm-offset-4 col-sm-1 col-md-offset-4 col-md-1 col-lg-offset-4 col-lg-1">Blog:</label>
+          <textarea name="rant" value="{{rant}}" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">{{rant}}</textarea> 
         {% if error == True and rant == "" %}
-          <div class="error">You need to enter a post.</div>
+          <div class="error col-xs-2 col-sm-2 col-md-2 col-lg-2">You need to enter a post.</div>
         {% endif %}
-        <br>
-        <button>Commit</button>
-        <a href="/blog">Cancel</a>
+        </div>
+        <div class="row">
+        <button class="col-xs-offset-5 col-xs-1 col-sm-offset-5 col-sm-1 col-md-offset-5 col-md-1 col-lg-offset-5 col-lg-1">Commit</button>
+        <a href="/blog" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">Cancel</a>
       </form>
     </section>
   </article>
