--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,8 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
+<section class="container">
 {% if user == "" %}
-<h2>Welcome, Udacity!</h2>
+<div class="row">
+<h2 class="col-xs-4 col-sm-4 col-md-4  col-lg-4">Welcome, Udacity!</h2>
+</div>
 {% else %}
-<h2>Welcome, {{ user }}</h2>
+<div class="row">
+<h2 class=" col-xs-3 col-sm-3 col-md-3 col-lg-3">Welcome, {{ user }}</h2>
+</div>
 {% endif %}
+</section>
 {% endblock %}
