--- a/templates/delete.html
+++ b/templates/delete.html
@@ -2,11 +2,16 @@
 {% block content %}
 <section class="container">
   <div class="row">
-    <p>Are you sure you want to <span class="delete">delete {{ title }}</span>?</p>
+    <p class="col-xs-offset-5 col-xs-3 col-sm-offset-5 col-sm-3 col-md-offset-5 col-md-3 col-lg-offset-5 col-lg-3">Are you sure you want to <span class="delete">delete {{ title }}</span>?</p>
   </div>
   <div class="row">
+  {% if error == False %}
   <form method="POST">
-    <button name="delete">Commit</button><a href="/blog">Cancel</a>
+    <button name="delete" class="col-xs-offset-6 col-xs-1 col-sm-offset-6 col-sm-1 
+    col-md-offset-6 col-md-1 col-lg-offset-6 col-lg-1">Commit</button><a href="/blog" class="col-xs-1 col-sm-1 col-md-1 col-lg-1">Cancel</a>
   </form>
+  {% else %}
+     <p>You can not delete this post.</p>
+  {% endif %}
 </div>
 {% endblock %}
