--- a/templates/singlepost.html
+++ b/templates/singlepost.html
@@ -15,8 +15,10 @@
     <div class="col-xs-offset-10 col-xs-1 col-sm-offset-10 col-sm-1 col-md-offset-10 col-md-1 col-lg-offset-10 col-lg-1">{{ post.dateTime.strftime("%b %d, %Y")}}</div>
   </div>
 </section>
+<hr>
 <div class="container">
 <h3 class="text-center">Comments</h3>
+<hr>
 </div>
 {% for i in comments %}
 {% if editKey == i.key() and task == "EditComment" %}
@@ -55,13 +57,19 @@
     </div>
   </section>
   {% if editKey == i.key() and task == "DeleteComment" %}
-     <div>Do you want to <span class="error">delete</span> this comment?</div>
-     <div class="container"
+  <div class="container">
+    <div class="row">
+     <div class="text-center">Do you want to <span class="error">delete</span> this comment?</div>
+     </div>
      <form method="POST" class="row">
        <input type="hidden" name="delete" value="{{ i.key.id }}">
-       <button class="col-xs-1 col-sm-1 col-md-1 col-lg-1">Delete</button>
+       <button class="col-xs-offset-5 col-xs-1 col-sm-offset-5 col-sm-1 col-md-offset-5 col-md-1 col-lg-offset-5 col-lg-1">Delete</button>
        <a href="/blog/{{post.key().id() }}" class="col-xs-1 col-sm-1 col-md-1 col-lg-1">Cancel</a>
      </form>
+   </div>
+   <br>
+   <br>
+
   {% endif %}
 {% endif %}
 {% if user == i.user %}
@@ -95,7 +103,7 @@
         {% endif %}
         </div>
         <div class="row">
-        <label class="col-xs-offset-4 col-xs-1 col-sm-offset-4 col-sm-1 col-md-offset-4 col-md-1 col-lg-offset-4 col-lg-1">Comment</label>
+        <label class="col-xs-offset-4 col-xs-1 col-sm-offset-4 col-sm-1 col-md-offset-4 col-md-1 col-lg-offset-4 col-lg-1">Comment:</label>
           <textarea name="comment" value="{{ comment }}" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">{{ comment }}</textarea>
         {% if comment == ""  and error == True %}
         <div class="error col-xs-2 col-sm-2 col-md-2 col-lg-2">Please enter a comment</div>
