like button now function correctly

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   </head>  
   <body>
     <header class="container">
-      <h1 class="text-center"><a href="/blog" class="title">The Blog</a></h1>
+      <h1 class="text-center"><a href="/" class="title">The Blog</a></h1>
       <div class="row">
       {% if user == "" or user == None %}
         <a href="/login">login</a>
