--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -15,9 +15,10 @@
           {{ i.bpost }}
       </pre>
       </section>
+      <section class="row">
       {% if user != "" and user != None%}
         {% if user != i.user %}
-      <form class="row" method="POST" action="/likes">
+      <form method="POST" action="/likes">
         <button class="" name="like" value="{{ i.key().id() }}">Like</button>
       </form>
       {% else %}
@@ -27,6 +28,8 @@
       </form>
         {% endif %}
       {% endif %}
+      <div>Likes {{ i.likes|length }}</div>
+      </section>
       <!-- view comments -->
       <section class="comments">
       {% for n in comments %}
