--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
   <br>
   <div class="row">
   <button class="col-xs-offset-5 col-xs-3 col-sm-offset-6 col-sm-2 col-md-offset-5 col-md-1 col-lg-offset-5 col-lg-1">Submit</button>
-  <a href="/blog" class="col-xs-1 col-sm-1 col-md-1 col-lg-1">Cancel</a>
+  <a href="/" class="col-xs-1 col-sm-1 col-md-1 col-lg-1">Cancel</a>
   </div>
 </form>
 </section>
