bug fixed: fixed the cancel button that links to a 404 page

--- a/templates/blogform.html
+++ b/templates/blogform.html
@@ -19,7 +19,7 @@
         </div>
         <div class="row">
         <button class="col-xs-offset-3 col-xs-3 col-sm-offset-5 col-sm-2 col-md-offset-5 col-md-1 col-lg-offset-5 col-lg-1">Commit</button>
-        <a href="/blog" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">Cancel</a>
+        <a href="/" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">Cancel</a>
       </form>
     </section>
   </article>
