--- a/templates/register.html
+++ b/templates/register.html
@@ -25,7 +25,7 @@
     </div>
     <div class="row">
     <button class="col-xs-offset-5 col-xs-2 col-sm-offset-5 col-sm-2 col-md-offset-6 col-md-1 col-lg-offset-6 col-lg-1"> log in</button>
-    <a href="/blog" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">cancel</a>
+    <a href="/" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">cancel</a>
     </div>
   </form>
 {% endblock %}
