--- a/templates/delete.html
+++ b/templates/delete.html
@@ -8,7 +8,7 @@
   {% if error == False %}
   <form method="POST">
     <button name="delete" class="col-xs-offset-6 col-xs-1 col-sm-offset-6 col-sm-1 
-    col-md-offset-6 col-md-1 col-lg-offset-6 col-lg-1">Commit</button><a href="/blog" class="col-xs-1 col-sm-1 col-md-1 col-lg-1">Cancel</a>
+    col-md-offset-6 col-md-1 col-lg-offset-6 col-lg-1">Commit</button><a href="/" class="col-xs-1 col-sm-1 col-md-1 col-lg-1">Cancel</a>
   </form>
   {% else %}
      <p>You can not delete this post.</p>
