--- a/templates/singlepost.html
+++ b/templates/singlepost.html
@@ -121,7 +121,7 @@
         <div class="row">
           <input type="hidden" name="task" value="NewComment">
           <button name="postid" value="{{ post.key().id() }}" class="col-xs-offset-4 col-xs-4 col-sm-offset-5 col-sm-2 col-md-offset-1 col-md-1 col-lg-offset-6 col-lg-1">Submit</button>
-          <a href="/blog" class="col-xs-1 col-sm-1 col-md-1 col-lg-1">Cancel</a>
+          <a href="/blog/{{post.key().id() }}" class="col-xs-1 col-sm-1 col-md-1 col-lg-1">Cancel</a>
         </div>
       </form>
     </div>
