comments are now only displayed for the post they are made to

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<div value="{{Unauth}}">{{Unauth}}</div>
 <section class="container">
 {% if message != "" %}
 <div class="row">
